# insider-threat-profiling

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
configs/: agent.example.toml  server.example.toml
crates/aegis-agent/: Cargo.toml
crates/aegis-agent/src/: main.rs
crates/aegis-cli/: Cargo.toml
crates/aegis-cli/src/: http.rs  main.rs
crates/aegis-cli/tests/: server_commands.rs
crates/aegis-core/: Cargo.toml
crates/aegis-core/benches/: dispatch.rs
crates/aegis-core/src/: bus.rs  config.rs  host.rs  lib.rs  loader.rs
crates/aegis-integration-tests/: Cargo.toml
crates/aegis-integration-tests/src/: lib.rs
crates/aegis-integration-tests/tests/: collectors.rs  dynamic.rs  pipeline.rs
crates/aegis-proto/: Cargo.toml
crates/aegis-proto/benches/: framing.rs
crates/aegis-proto/src/: lib.rs  pin.rs  tls.rs
crates/aegis-proto/tests/: framing.proptest-regressions  framing.rs
crates/aegis-sdk/: Cargo.toml
crates/aegis-sdk/src/: event.rs  lib.rs  plugin.rs
crates/aegis-server/: Cargo.toml
crates/aegis-server/assets/dashboard/: app.css  app.js  index.html
crates/aegis-server/src/: api.rs  dashboard.rs  enroll.rs  ingest.rs  main.rs  registry.rs  sink.rs  store.rs
crates/example-plugin/: Cargo.toml
crates/example-plugin/src/: lib.rs
docs/: ARCHITECTURE.md  BUILD.md  METHODOLOGY.md  PLUGINS.md  THREAT_MODEL.md  detection-design.md  diagrams.md  evasion-game-results.md  linode-integration.md  model-comparison.md  perf.md  security-audit.md  server-design.md  transport-design.md
docs/blog/: blog.md  outline.md
docs/paper/: outline.md  paper.md  references.md  refs-endpoint-tamper.bib  refs-endpoint-tamper.md  related-work.md  results.md
docs/paper/sections/: 00-abstract-intro.md  01-background-related.md  02-architecture.md  03-detection.md  04-threat-game.md  05-evaluation.md  06-implementation.md  07-ethics-conclusion.md
packaging/: README.md
plugins/plugin-agent-detect/: Cargo.toml
plugins/plugin-agent-detect/benches/: assess.rs  detect_e2e.rs  features.rs
plugins/plugin-agent-detect/examples/: eval_report.rs  evasion_game.rs  model_comparison.rs
plugins/plugin-agent-detect/src/: baseline.rs  eval.rs  features.rs  lib.rs  model.rs  synth.rs
plugins/plugin-process/: Cargo.toml
plugins/plugin-process/src/: lib.rs
plugins/plugin-scoring/: Cargo.toml
plugins/plugin-scoring/src/: lib.rs
plugins/plugin-session/: Cargo.toml
plugins/plugin-session/src/: lib.rs
plugins/plugin-tamper/: Cargo.toml
plugins/plugin-tamper/src/: immutable.rs  install.rs  lib.rs  manifest.rs
plugins/plugin-transport/: Cargo.toml
plugins/plugin-transport/src/: actor.rs  auth.rs  config.rs  identity.rs  lib.rs  ring.rs  spill.rs
plugins/plugin-transport/tests/: reconnect.rs
plugins/plugin-tty/: Cargo.toml
plugins/plugin-tty/src/: analyzer.rs  levenshtein.rs  lib.rs  runtime.rs
plugins/plugin-tty/tests/: pipe_pipeline.rs
scripts/: demo.sh  integration_demo.sh
