[workspace]
resolver = "2"
members = [
    "crates/aegis-sdk",
    "crates/aegis-core",
    "crates/aegis-proto",
    "crates/aegis-agent",
    "crates/aegis-server",
    "crates/aegis-cli",
    "plugins/plugin-process",
    "plugins/plugin-session",
    "plugins/plugin-tty",
    "plugins/plugin-agent-detect",
    "plugins/plugin-scoring",
    "plugins/plugin-tamper",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
license = "Apache-2.0"
authors = ["Anthony Herman <aherm@protonmail.com>", "Claude <noreply@anthropic.com>"]
repository = "https://github.com/AnthonyHerman/insider-threat-profiling"
description = "Aegis: a plugin-native, client/server behavioral threat-modeling platform"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "signal", "fs", "process"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
postcard = { version = "1", features = ["use-std"] }

# Errors / logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Identity / crypto (pure-Rust, musl friendly)
uuid = { version = "1", features = ["v4", "serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

# Storage (pure-Rust embedded)
redb = "2"

# TLS / networking (rustls + ring -> static friendly)
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }

# HTTP server / dashboard
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio", "query"] }
tower = "0.5"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Plugins
inventory = "0.3"
libloading = "0.8"
libc = "0.2"

# Stats / time
statrs = "0.17"
time = { version = "0.3", features = ["formatting", "macros"] }

# Internal crates
aegis-sdk = { path = "crates/aegis-sdk" }
aegis-core = { path = "crates/aegis-core" }
aegis-proto = { path = "crates/aegis-proto" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dist]
inherits = "release"
lto = "fat"
