[package]
name = "aegis-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Aegis endpoint agent: collects behavioral telemetry and reports to the server. Tamper-resistant install."

[[bin]]
name = "aegis-agent"
path = "src/main.rs"

[dependencies]
aegis-core.workspace = true
aegis-sdk.workspace = true
aegis-proto.workspace = true
# Built-in plugins linked into the agent (collectors + self-protection).
plugin-process = { path = "../../plugins/plugin-process" }
plugin-session = { path = "../../plugins/plugin-session" }
plugin-tamper = { path = "../../plugins/plugin-tamper" }

tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
