[package]
name = "aegis-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "aegisctl: management CLI for the Aegis platform."

[[bin]]
name = "aegisctl"
path = "src/main.rs"

[dependencies]
aegis-core.workspace = true
aegis-sdk.workspace = true
aegis-proto.workspace = true
# Link every built-in plugin so `aegisctl plugins` enumerates the full set.
plugin-process = { path = "../../plugins/plugin-process" }
plugin-session = { path = "../../plugins/plugin-session" }
plugin-agent-detect = { path = "../../plugins/plugin-agent-detect" }
plugin-scoring = { path = "../../plugins/plugin-scoring" }
plugin-tamper = { path = "../../plugins/plugin-tamper" }

tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
