[package]
name = "aegis-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Aegis kernel: plugin host, event bus, and static/dynamic plugin loaders. Contains no features itself."

[dependencies]
aegis-sdk.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
inventory.workspace = true
libloading.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true }
# `async_tokio` lets the dispatch bench drive the real Host (run/emit/shutdown)
# through a tokio runtime.
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "dispatch"
harness = false
