[package]
name = "aegis-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Aegis wire protocol: framed, versioned messages exchanged between agents and the server."

[dependencies]
aegis-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
rcgen = { workspace = true }
proptest = { workspace = true }
