[package]
name = "aegis-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Aegis plugin SDK: stable contracts (events, plugin trait, registration) shared by core, plugins, and binaries"

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
inventory.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true }
