[package]
name = "aegis-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Aegis server: self-contained binary that ingests agent telemetry, runs central detection/scoring, and serves a dashboard."

[[bin]]
name = "aegisd"
path = "src/main.rs"

[dependencies]
aegis-core.workspace = true
aegis-sdk.workspace = true
aegis-proto.workspace = true
# Central processors run server-side over ingested telemetry.
plugin-agent-detect = { path = "../../plugins/plugin-agent-detect" }
plugin-scoring = { path = "../../plugins/plugin-scoring" }

tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
