[package]
name = "aegis-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Aegis server: self-contained binary that ingests agent telemetry, runs central detection/scoring, and serves a dashboard."

[[bin]]
name = "aegisd"
path = "src/main.rs"

[dependencies]
aegis-core.workspace = true
aegis-sdk.workspace = true
aegis-proto.workspace = true
# Central processors run server-side over ingested telemetry.
plugin-agent-detect = { path = "../../plugins/plugin-agent-detect" }
plugin-scoring = { path = "../../plugins/plugin-scoring" }

tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
# The store sink implements the async `Plugin` trait.
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true

# HTTP/JSON operator API + SSE + embedded dashboard (api.rs, dashboard.rs).
# axum's own Router/middleware suffice; `tower` is pulled in only as a dev-dep
# for ServiceExt::oneshot in the API tests (no network). `futures` provides the
# stream adapter that turns a broadcast::Receiver into the SSE event stream.
axum.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
futures.workspace = true

# Embedded storage (store.rs): pure-Rust single-file KV + compact row encoding.
redb.workspace = true
postcard.workspace = true
uuid.workspace = true

# TLS ingest + enrollment (ingest.rs, enroll.rs): self-signed cert generation,
# pinned TLS 1.3 acceptor, Ed25519 session-auth verification.
rustls.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
rand.workspace = true
hex.workspace = true
base64.workspace = true

[dev-dependencies]
# Unit tests open a redb database in a throwaway directory.
tempfile = "3"
# API tests drive the axum Router in-process (no network) via
# `tower::ServiceExt::oneshot`; `http-body-util` collects the response body.
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
