[package]
name = "plugin-agent-detect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Processor plugin: agent-vs-human operator distinction from behavioral telemetry."

[dependencies]
aegis-sdk.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
