[package]
name = "plugin-agent-detect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Processor plugin: agent-vs-human operator distinction from behavioral telemetry."

[dependencies]
aegis-sdk.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
# `async_tokio` is needed for the end-to-end detector bench, which drives the
# plugin's async `handle` through a tokio runtime.
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "assess"
harness = false

[[bench]]
name = "features"
harness = false

[[bench]]
name = "detect_e2e"
harness = false
