[package]
name = "plugin-scoring"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Processor plugin: aggregates signals into a per-subject risk score and raises alerts."

[dependencies]
aegis-sdk.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
