[package]
name = "plugin-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Collector plugin: interactive session lifecycle + keystroke/command timing telemetry (timing only, no content)."

[dependencies]
aegis-sdk.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
# Opaque, unguessable session identifiers (random UUIDv4) so a co-located process
# cannot enumerate/forge a victim's session_id (THREAT_MODEL §4.2 A6).
uuid.workspace = true
