[package]
name = "plugin-tamper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Control plugin: endpoint self-protection (tamper resistance) for the agent."

[dependencies]
aegis-sdk.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
libc.workspace = true
sha2.workspace = true
hex.workspace = true
